add last section of partnership, media section

--- a/app/views/static_pages/partnership.html.erb
+++ b/app/views/static_pages/partnership.html.erb
@@ -88,14 +88,153 @@
     
         </div>
         <!-- Grid row -->
-    
+
         <hr class="my-5">
+
+
+    
         
       </section>
       <!--Section: Content-->
+
+      <section class="dark-grey-text text-left">
+    
+        <!-- Section heading -->
+        <h3 class="font-weight-bold black-text mb-4 pb-2"><strong>Couverture médiatique</strong></h3>
+        <hr class="w-header">
+        <!-- Section description -->
+        <p class="lead text-muted mx-auto mt-4 pt-2 mb-5">L’Europ’Raid bénéficie désormais d'une large médiatisation au niveau local, régional et même national. Profitant de la communication que réalise chaque équipage à travers les réseaux sociaux, la radio et la presse aussi bien avant, pendant et après le parcours, de plus en plus de professionnels et collectivités s'y associent.Ils parlent de l'Europ'raid :</p>
+    
+        <!--First row-->
+        <div class="row">
+    
+          <!--Grid column-->
+          <div class="col-md-3 mb-4">
+    
+            <!-- Card -->
+            <div class="card ">
+              <!-- Card content -->
+              <div class="card-body my-4">
+
+                <%= image_tag("partnership/Logo_France_3.png", class:"card-img-top", alt:"Card image cap") %>               
+                
+              </div>
+            </div>  
+            
+            <!-- Card -->
+    
+          </div>
+          <!--Grid column-->
+    
+          <!--Grid column-->
+          <div class="col-md-3 mb-4">
+    
+            <!-- Card -->
+            <div class="card">
+              
+              <!-- Card content -->
+              <div class="card-body my-4">
+                <%= image_tag("partnership/Logo_Le_Figaro_Etudiant.png", class:"card-img-top", alt:"Card image cap") %>               
+                   
+              </div>
+    
+            </div>
+            <!-- Card -->
+    
+          </div>
+          <!--Grid column-->
+          
+          <!--Grid column-->
+          <div class="col-md-3 mb-4">
+    
+            <!-- Card -->
+            <div class="card">
+              
+              <!-- Card content -->
+              <div class="card-body my-4">
+                <%= image_tag("partnership/Logo_NRJ.png", class:"card-img-top", alt:"Card image cap") %>               
+                  
+              </div>
+    
+            </div>
+            <!-- Card -->
+    
+          </div>
+          <!--Grid column-->
+          
+          <!--Grid column-->
+          <div class="col-md-3 mb-4">
+    
+            <!-- Card -->
+            <div class="card hoverable">
+              
+              <!-- Card content -->
+              <div class="card-body my-4">
+                <%= image_tag("partnership/Logo_Ouest-France.png", class:"card-img-top", alt:"Card image cap") %>               
+                
+              </div>
+    
+            </div>
+            <!-- Card -->
+
+
+    
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-md-3 mb-4">
+    
+            <!-- Card -->
+            <div class="card hoverable">
+              
+              <!-- Card content -->
+              <div class="card-body my-4">
+                <%= image_tag("partnership/Logo_Parisien.png", class:"card-img-top", alt:"Card image cap") %>               
+                
+              </div>
+    
+            </div>
+            <!-- Card -->
+
+            
+    
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-md-3 mb-4">
+    
+            <!-- Card -->
+            <div class="card hoverable">
+              
+              <!-- Card content -->
+              <div class="card-body my-4">
+                <%= image_tag("partnership/Logo_Virgin_Radio.png", class:"card-img-top", alt:"Card image cap") %>               
+                
+              </div>
+    
+            </div>
+            <!-- Card -->
+
+            
+    
+          </div>
+          <!--Grid column-->
+
+
+    
+        </div>
+        <!--First row-->
+    
+      </section>
+
     
     
     </div>
+
+   
+
 
     <div class="container mt-5">
       <!--Section: Content-->
