--- a/app/views/static_pages/home_page.html.erb
+++ b/app/views/static_pages/home_page.html.erb
@@ -21,13 +21,7 @@
               <h1 class="h3-responsive text-white">La solidarité n'a pas de frontière</h1>
 
               <p>Les Raidators souhaitent récolter des dons divers afin de les distribuer à travers l’Europe en 2021. Particuliers comme professionnels ont un rôle essentiel dans cette démarche.</p>
-<<<<<<< HEAD
-
-              <%= link_to 'Nous soutenir', products_path, class: "btn btn-success text-white p-2 mx-0"%>
-
-=======
                <%= link_to 'Nous soutenir', products_path, class: "btn btn-success text-white p-2 mx-0"%>
->>>>>>> development
             </div>
           </div>
           <div class="carousel-item ">
@@ -40,12 +34,7 @@
             <div class="carousel-caption">
               <h1 class="h3-responsive text-white">La solidarité n'a pas de frontière</h1>
               <p>Les Raidators souhaitent récolter des dons divers afin de les distribuer à travers l’Europe en 2021. Particuliers comme professionnels ont un rôle essentiel dans cette démarche.</p>
-<<<<<<< HEAD
-              <%= link_to 'Nous soutenir', products_path, class: "btn btn-success text-white p-2 mx-0"%>
-
-=======
                <%= link_to 'Nous soutenir', products_path, class: "btn btn-success text-white p-2 mx-0"%>
->>>>>>> development
             </div>
           </div>
           <div class="carousel-item ">
@@ -59,11 +48,7 @@
               <h1 class="h3-responsive text-white">La solidarité n'a pas de frontière</h1>
               <p>Les Raidators souhaitent récolter des dons divers afin de les distribuer à travers l’Europe en 2021. Particuliers comme professionnels ont un rôle essentiel dans cette démarche.</p>
               <%= link_to 'Nous soutenir', products_path, class: "btn btn-success text-white p-2 mx-0"%>
-<<<<<<< HEAD
-
-=======
               
->>>>>>> development
             </div>
           </div>
         </div>
@@ -112,11 +97,6 @@
                   <!-- Text -->
                   <p class="card-title text-muted font-small mt-3 mb-2">3 coéquipier se sont engagé à livrer 70 kg de matériel en voiture  soit au minimum 36 tonnes de fournitures scolaires et sportives distribuées dans une vingtaines d’écoles de l’Est isolées.</p>
                   
-<<<<<<< HEAD
-                  <%= link_to "Découvrir l'équipe", team_path, class: "btn btn-success text-white p-2 mx-0"%>
-                  
-=======
->>>>>>> development
                 </div>
       
               </div>
@@ -141,14 +121,10 @@
                   <h3 class="black-text">20 pays en 23 jours</h3>
                   <!-- Text -->
                   <p class="card-title text-muted font-small mt-3 mb-2">Un itinéraire traversant de capitales et patrimoines mondiaux inscrits à l’UNESCO, mais aussi des rencontres.</p>
-<<<<<<< HEAD
-                                    
-=======
                   <br>
                   <br>
                   
                   
->>>>>>> development
                 </div>
       
               </div>
@@ -173,13 +149,9 @@
                   <h3 class="black-text">10 000 Kilomètres</h3>
                   <!-- Text -->
                   <p class="card-title text-muted font-small mt-3 mb-2">Un parcours d'au moins 450 km par jour,avec seulement une boussole, une carte et un carnet de bord.</p>
-<<<<<<< HEAD
-                                    
-=======
                   <br>
                   <br>
                   
->>>>>>> development
                 </div>
       
               </div>
@@ -222,12 +194,7 @@
                     <!-- Text -->
                     <p class="card-title text-muted font-small mt-3 mb-2">Devenez partenaire ! Financier ou en nature, vous pouvez soutenir la cause !</p>
                     
-<<<<<<< HEAD
-                  <%= link_to 'Devenir un partenaire', partnership_path, class: "btn btn-success text-white p-2 mx-0"%>
-                    
-=======
                     <%= link_to 'Devenir un partenaire', partnership_path, class: "btn btn-success btn-raidators text-white p-2 mx-0"%>                    
->>>>>>> development
                   </div>   
 
               </div>
@@ -253,12 +220,7 @@
                   <!-- Text -->
                   <p class="card-title text-muted font-small mt-3 mb-2">Soutenez Europ.Raid en achetant un produits ou en faisant un don de matériel !</p>
                   
-<<<<<<< HEAD
-                  <%= link_to 'Soutenir en tant que particuliers', privatevisitors_path, class: "btn btn-success text-white p-2 mx-0"%>
-                                   
-=======
                   <%= link_to 'Soutenir en tant que particuliers', privatevisitors_path, class: "btn btn-success text-white p-2 mx-0"%>                  
->>>>>>> development
                 </div>
       
               </div>
@@ -342,11 +304,7 @@
               <p>Europ’Raid est une aventure sportive, culturelle et solidaire, mais surtout une action humanitaire hors du commun.
                 Le but premier est de venir en aide à des enfants défavorisés d’Europe de l’Est. En effet, depuis 2014 tous les équipages ont pour mission d’apporter 70 kg de fournitures scolaires.</p>
               <!-- Read more button -->
-<<<<<<< HEAD
-      
-=======
               <%= link_to "Faire un don", products_path, class:"btn btn-success btn-md btn-rounded mx-0" %> 
->>>>>>> development
             </div>
             <!-- Grid column -->
 
@@ -384,7 +342,7 @@
         <h3 class="font-weight-bold black-text mb-4 pb-2">Ils nous soutiennent</h3>
         <hr class="w-header">
         <!-- Section description -->
-        <p class="lead text-muted mx-auto mt-4 pt-2 mb-5">Cette aventure ne serait possible sans le soutient de nos partenaires. Entreprise ou particulier, chaque soutient compte. </p>
+        <p class="lead text-muted mx-auto mt-4 pt-2 mb-5">Cette aventure ne serait pas possible sans le soutient de nos partenaires. Entreprise ou particulier, chaque soutient compte. </p>
     
         <!--First row-->
         <div class="row">
