--- a/app/views/static_pages/partnership.html.erb
+++ b/app/views/static_pages/partnership.html.erb
@@ -112,7 +112,7 @@
           <div class="col-md-3 mb-4">
     
             <!-- Card -->
-            <div class="card ">
+            <div class="hoverable">
               <!-- Card content -->
               <div class="card-body my-4">
 
@@ -130,7 +130,7 @@
           <div class="col-md-3 mb-4">
     
             <!-- Card -->
-            <div class="card">
+            <div class="hoverable">
               
               <!-- Card content -->
               <div class="card-body my-4">
@@ -148,7 +148,7 @@
           <div class="col-md-3 mb-4">
     
             <!-- Card -->
-            <div class="card">
+            <div class="hoverable">
               
               <!-- Card content -->
               <div class="card-body my-4">
@@ -166,7 +166,7 @@
           <div class="col-md-3 mb-4">
     
             <!-- Card -->
-            <div class="card hoverable">
+            <div class="hoverable">
               
               <!-- Card content -->
               <div class="card-body my-4">
@@ -186,7 +186,7 @@
           <div class="col-md-3 mb-4">
     
             <!-- Card -->
-            <div class="card hoverable">
+            <div class="hoverable">
               
               <!-- Card content -->
               <div class="card-body my-4">
@@ -206,7 +206,7 @@
           <div class="col-md-3 mb-4">
     
             <!-- Card -->
-            <div class="card hoverable">
+            <div class="hoverable">
               
               <!-- Card content -->
               <div class="card-body my-4">
