banner changed + homepagewording + fontandspaces

--- a/app/views/static_pages/partnership.html.erb
+++ b/app/views/static_pages/partnership.html.erb
@@ -13,7 +13,7 @@
             <p class="text-left font-weight-bold mb-3 mt-5">Depuis sa création en 2014, Europ'Raid a déjà distribué plus de 65 tonnes de matériel scolaire sportif et médical qui ont été distribuées dans une vingtaine d’écoles situées en Bosnie-Herzégovine, Albanie, Macédoine, Bulgarie et Roumanie. En six ans, l’aide solidaire des équipages de Europ’Raid est ainsi passée de plusieurs centaines de kilogrammes à plusieurs dizaines de tonnes chaque année. En tant qu’entreprise, vous pouvez contribuer au succès de l’édition 2021 et contribuer à rendre  plus accessible l’éducation.
             </p>
 
-            <button type="button" class="btn btn-success text-white p-10 mx-5">Telecharger le dossier de sponsoring</button>
+            <button type="button" class="btn btn-success btn-raidators text-white p-10 mx-5">Telecharger le dossier de sponsoring</button>
 
           </div>
           <div class="col-6 themed-grid-col">
@@ -81,7 +81,7 @@
               La carrosserie de la 205 est réservée aux encarts publicitaires de nos sponsors, avec des emplacements différents selon le type de partenariat. Votre entreprise peut choisir l'emplacement qui lui convient, parmi ceux disponibles et être visible à travers 20 pays et 10 capitales.
             </p>
             <!-- Read more button -->
-            <button type="button" class="btn btn-success text-white p-10 mx-5">Découvrir la voiture et ses emplacements disponibles</button>
+            <button type="button" class="btn btn-success btn-raidators text-white p-10 mx-5">Découvrir la voiture et ses emplacements disponibles</button>
     
           </div>
           <!-- Grid column -->
@@ -117,8 +117,8 @@
               Récoltez du matériel caritatif ou sponsorisez-nous en nous permettant de revendre vos produits sur notre plateforme, ou en nous équipant pour le raid (équipement numériques, camping
               </p>
             <!-- Read more button -->
-            <button type="button" class="btn btn-success text-white p-10 mx-5">Partenariat nature</button>
-            <button type="button" class="btn btn-success text-white p-10 mx-5">Nous contacter</button>
+            <button type="button" class="btn btn-success btn-raidators text-white p-10 mx-5">Partenariat nature</button>
+            <button type="button" class="btn btn-success btn-raidators text-white p-10 mx-5">Nous contacter</button>
 
     
           </div>
