--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -24,7 +24,6 @@
 /* ------------NAVBAR------------ */
  .navbar-custom {
   background-color: #1B221D ;
-  
 }
 /* change the brand and text color */
 .navbar-custom .navbar-brand,
@@ -38,43 +37,88 @@
 /* change the color of active or hovered links */
 .navbar-custom .nav-item.active .nav-link,
 .navbar-custom .nav-item:hover .nav-link {
-  color: #0ea500;
+  color: #ffffff;
 }
 
-<<<<<<< HEAD
-/* ------------Titles------------ */
-.h1{
-  font-family: Segoe UI;
+.nav-link{
+  font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', 'sans-serif';
+  font-weight: lighter;
 }
-=======
+
 /* ------------SMALL CARD WITH IMAGE TOP AND TEXT BELLOW------------ */
 
 /* Found in equipments and donation/products and home pages  */
 /* change the radius and shadows  of cards  */
 .SmallcardRaidators {
-background: #FFFFFF;
-box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.10);
-border-radius: 12px;
-border: none;
-margin-bottom: 10px;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.10);
+  border-radius: 12px;
+  border: none;
+  margin-bottom: 10px;
 }
 
 .SmallcardImageRaidators {
-border-top-left-radius: 12px ;
-border-top-right-radius: 12px ;
-box-shadow: 0px 0px 0px
+  border-top-left-radius: 12px ;
+  border-top-right-radius: 12px ;
+  box-shadow: 0px 0px 0px;
 }
 /* ------------Card with image right or left------------ */
 
 .CardImageRightLeftRaidators{
-border-radius: 20px;
+  border-radius: 20px;
 }
 
 .btn-raidators {
-background: #57B48A;
-/* Actionable Item */
-border-color:#57B48A;
-box-sizing: border-box;
-border-radius: 6px; 
+  background: #57B48A;
+  /* Actionable Item */
+  border-color:#57B48A;
+  box-sizing: border-box;
+  border-radius: 6px; 
 }
->>>>>>> origin
+
+/* ------------Fonts------------ */
+
+h1{
+  font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', 'sans-serif';
+}
+
+h2{
+  font-family:'Roboto', 'Open Sans', 'Helvetica Neue', 'sans-serif';
+}
+
+p{
+  font-family: 'Nunito','lato','Open Sans';
+  font-size: 15px;
+  line-height: 1.6;
+}
+
+
+/* ------------Banner------------ */
+.banner{
+  height: 300px;
+}
+.bannerbackground{
+  color: #f1f1f1; /* Grey text */
+  background: url(https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  height: 100%;
+  position: relative;
+}
+
+.bannerfilter{
+  background-color: rgba(81, 103, 90, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.bannercontainer{
+  position: absolute;
+  top: 40%;
+  text-align: center;
+  width: 100%;
+}
