--- a/app/views/static_pages/equipments.html.erb
+++ b/app/views/static_pages/equipments.html.erb
@@ -1,13 +1,11 @@
-<!-- Parts - line 3, line 21-how to give, line 155-material, line 651-link -->
 <%= render :partial => "shared/banner" %>
 <!-- Container introduction and how to help -->
 <div class="container mt-5">
   <!--Section: Content-->
   <section class="">
-
     <!-- Section heading -->
     <h2 class="text-left font-weight-bold mb-5">Donner accès à l'éducation</h2>
-    <p class="text-left font-weight-bold mb-5">L’ Europ’Raid est le premier Raid-Aventure d’ Europe. Il organise cette action dans les pays de l’Europe de l’Est depuis 2014.
+    <p class="text-left font-weight-bold mb-5">L'Europ.Raid est le premier Raid-Aventure d’ Europe. Il organise cette action dans les pays de l’Europe de l’Est depuis 2014.
     Ce raid consiste à traverser l’Europe en Peugeot 205 avec à son bord 70 Kg de matériel scolaire, sportif ou médical. Ces dernières seront ensuite distribuées dans des écoles et orphelinats locaux d’Europe de l’Est pour aider les enfants défavorisés.<br> 
     <br>
     Vous trouverez ci-dessous quels équipements nous pouvons collecter et quels sont les points de collectes. </p>
@@ -16,7 +14,7 @@
 </div>
 <!-- Container introduction -->
 
-<!-- Container Place to give -->
+<!-- Container Place to give equipment -->
 <div class="container mt-5">
   <!--Section: Content-->
   <section class="dark-grey-text">
@@ -74,7 +72,7 @@
       <div class="col-lg-5">
 
         <!-- Featured video -->
-        <div class="view overlay  mb-lg-0 mb-4">
+        <div class="view overlay mb-lg-0 mb-4">
         <%= image_tag("equipment/shop.png", class:"img-fluid CardImageRightLeftRaidators", alt:"Sample image") %> 
         </div>
       </div>
@@ -89,7 +87,7 @@
         <!-- Post title -->
         <h3 class="font-weight-bold mb-3"><strong>Magasin</strong></h3>
         <!-- Excerpt -->
-        <p>Les fêtes de fin d'années approchent ! La solidarité est mise à l'honneur pendant cette période. Pourquoi ne pas soutenir une cause solidaire en mettant en place un point de collecte ? Nous vous fournissons des affiches explicatives et venons récupérer le matériel. 
+        <p>Les fêtes de fin d'années approchent ! La solidarité est mise à l'honneur pendant cette période. Pourquoi ne pas soutenir une cause solidaire en mettant en place un point de collecte ? Nous vous fournissons des affiches explicatives et venons récupérer le matériel. </p>
 
       </div>
       <!-- Grid column -->
@@ -160,7 +158,7 @@
         <!-- Nav tabs -->
         <ul class="nav md-pills flex-center flex-wrap mx-0" role="tablist">
           <li class="nav-item">
-            <a class="nav-link active font-weight-bold text-uppercase" data-toggle="tab" href="#panel31" role="tab">Scolaire & Sportif</a>
+            <a class="nav-link font-weight-bold text-uppercase" data-toggle="tab" href="#panel31" role="tab">Scolaire & Sportif</a>
           </li>
           <li class="nav-item">
             <a class="nav-link font-weight-bold text-uppercase" data-toggle="tab" href="#panel32" role="tab">Hygiène & Médical</a>
@@ -280,7 +278,7 @@
               <div class="card-body">
 
                 <p class="my-3">Livres de dessin </p>
-                <p class="card-text text-muted font-small "></p>
+                <p class="card-text text-muted font-small"></p>
 
               </div>
 
@@ -584,7 +582,6 @@
 
             <!-- Grid column -->
             <div class="col-md-6 col-lg-3">
-
               
               <!-- Card -->
               <div class="card SmallcardRaidators">
@@ -642,9 +639,4 @@
 
 </div>
 <!-- Container Material -->
-
-<div class= "container align-items-center mb-10">
-  <%= link_to "Accueil", root_path,class:"btn btn-primary btn-md btn-rounded mx-0" %> 
-</div>
   
-</div>
