--- a/app/views/static_pages/team.html.erb
+++ b/app/views/static_pages/team.html.erb
@@ -77,7 +77,7 @@
         </div>
         <!-- Grid row -->
 
-        <button type="button" class="btn btn-success text-white p-10 mx-5">Nous suivre</button>
+        <button type="button" class="btn btn-success btn-raidators text-white p-10 mx-5">Nous suivre</button>
 
         
       </section>
