--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,11 +1,11 @@
 <!-- Full Page Intro -->
 <div class="banner">
   <!-- Banner image backgroung and filter -->  
-  <div class="bannerbackground">
-    <div class="bannerfilter">
+  <div class="banner-background">
+    <div class="banner-filter">
     </div>
     <!-- Content -->
-    <div class="bannercontainer">
+    <div class="banner-container">
       <h1 class="text-white">Les Raidators</h1>
       <h3 class="text-white">La solidarité n'a pas de  frontière !</h3>
     </div>
