--- a/app/views/static_pages/equipments.html.erb
+++ b/app/views/static_pages/equipments.html.erb
@@ -43,7 +43,7 @@
 
         <!-- Featured image -->
         <div class="view overlay  mb-lg-0 mb-4 ">
-          <%= image_tag("equipment/post.png", class:"img-fluid CardImageRightLeftRaidators", alt:"Sample image") %> 
+          <%= image_tag("equipment/post.png", class:"img-fluid card-with-right-left-image-raidators", alt:"Sample image") %> 
         </div>
 
       </div>
@@ -73,7 +73,7 @@
 
         <!-- Featured video -->
         <div class="view overlay mb-lg-0 mb-4">
-        <%= image_tag("equipment/shop.png", class:"img-fluid CardImageRightLeftRaidators", alt:"Sample image") %> 
+        <%= image_tag("equipment/shop.png", class:"img-fluid card-with-right-left-image-raidators", alt:"Sample image") %> 
         </div>
       </div>
       <!-- Grid column -->
@@ -129,7 +129,7 @@
 
         <!-- Featured image -->
         <div class="view mb-lg-0 mb-4">
-        <%= image_tag("equipment/school.png", class:"img-fluid CardImageRightLeftRaidators", alt:"Sample image") %> 
+        <%= image_tag("equipment/school.png", class:"img-fluid card-with-right-left-image-raidators", alt:"Sample image") %> 
         
         </div>
 
@@ -185,10 +185,10 @@
           <div class="col-md-6 col-lg-3 mx-4">
 
             <!-- Card -->
-            <div class="card SmallcardRaidators">
+            <div class="card small-card-raidators">
 
               <!-- Card image -->
-              <%= image_tag("equipment/backpack.jpg", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %> 
+              <%= image_tag("equipment/backpack.jpg", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %> 
 
               <!-- Card content -->
               <div class="card-body">
@@ -202,10 +202,10 @@
             <!-- Card -->
 
             <!-- Card -->
-            <div class="card SmallcardRaidators">
+            <div class="card small-card-raidators">
 
               <!-- Card image -->
-              <%= image_tag("equipment/notebook.jpg", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %> 
+              <%= image_tag("equipment/notebook.jpg", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %> 
 
               <!-- Card content -->
               <div class="card-body">
@@ -219,10 +219,10 @@
             <!-- Card -->
 
             <!-- Card -->
-            <div class="card SmallcardRaidators">
+            <div class="card small-card-raidators">
 
               <!-- Card image -->
-              <%= image_tag("equipment/scissor.png", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %> 
+              <%= image_tag("equipment/scissor.png", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %> 
               <!-- Card content -->
               <div class="card-body">
 
@@ -235,10 +235,10 @@
             <!-- Card -->
 
             <!-- Card -->
-            <div class="card SmallcardRaidators">
+            <div class="card small-card-raidators">
 
               <!-- Card image -->
-              <%= image_tag("equipment/postit.jpg", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %> 
+              <%= image_tag("equipment/postit.jpg", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %> 
 
               <!-- Card content -->
               <div class="card-body">
@@ -252,10 +252,10 @@
             <!-- Card -->
 
             <!-- Card -->
-            <div class="card SmallcardRaidators">
+            <div class="card small-card-raidators">
 
               <!-- Card image -->
-              <%= image_tag("equipment/sportbag.jpg", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %> 
+              <%= image_tag("equipment/sportbag.jpg", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %> 
 
               <!-- Card content -->
               <div class="card-body">
@@ -269,10 +269,10 @@
             <!-- Card -->
 
             <!-- Card -->
-            <div class="card SmallcardRaidators" >
+            <div class="card small-card-raidators" >
 
               <!-- Card image -->
-              <%= image_tag("equipment/drawingbook.jpg", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %> 
+              <%= image_tag("equipment/drawingbook.jpg", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %> 
 
               <!-- Card content -->
               <div class="card-body">
@@ -293,10 +293,10 @@
           <div class="col-md-6 col-lg-3">
 
             <!-- Card -->
-            <div class="card SmallcardRaidators">
+            <div class="card small-card-raidators">
 
               <!-- Card image -->
-              <%= image_tag("equipment/gridbook.png", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %> 
+              <%= image_tag("equipment/gridbook.png", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %> 
 
               <!-- Card content -->
               <div class="card-body">
@@ -310,10 +310,10 @@
             <!-- Card -->
 
             <!-- Card -->
-            <div class="card SmallcardRaidators" >
+            <div class="card small-card-raidators" >
 
               <!-- Card image -->
-              <%= image_tag("equipment/linebook.png", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %> 
+              <%= image_tag("equipment/linebook.png", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %> 
 
               <!-- Card content -->
               <div class="card-body">
@@ -328,10 +328,10 @@
             <!-- Card -->
 
             <!-- Card -->
-            <div class="card SmallcardRaidators">
+            <div class="card small-card-raidators">
 
               <!-- Card image -->
-              <%= image_tag("equipment/computer.jpg", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %> 
+              <%= image_tag("equipment/computer.jpg", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %> 
 
               <!-- Card content -->
               <div class="card-body">
@@ -345,10 +345,10 @@
             <!-- Card -->
 
             <!-- Card -->
-            <div class="card SmallcardRaidators" >
+            <div class="card small-card-raidators" >
 
               <!-- Card image -->
-              <%= image_tag("equipment/pingpong.jpg", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %> 
+              <%= image_tag("equipment/pingpong.jpg", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %> 
 
               <!-- Card content -->
               <div class="card-body">
@@ -362,10 +362,10 @@
             <!-- Card -->
 
             <!-- Card -->
-            <div class="card SmallcardRaidators" >
+            <div class="card small-card-raidators" >
 
               <!-- Card image -->
-              <%= image_tag("equipment/basket.jpg", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %> 
+              <%= image_tag("equipment/basket.jpg", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %> 
               <!-- Card content -->
               <div class="card-body">
 
@@ -378,10 +378,10 @@
             <!-- Card -->
 
             <!-- Card -->
-            <div class="card SmallcardRaidators" >
+            <div class="card small-card-raidators" >
 
               <!-- Card image -->
-              <%= image_tag("equipment/painting.jpg", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %> 
+              <%= image_tag("equipment/painting.jpg", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %> 
 
               <!-- Card content -->
               <div class="card-body">
@@ -402,10 +402,10 @@
           <div class="col-md-6 col-lg-3">
 
             <!-- Card -->
-            <div class="card SmallcardRaidators">
+            <div class="card small-card-raidators">
 
               <!-- Card image -->
-              <%= image_tag("equipment/paper.png", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %> 
+              <%= image_tag("equipment/paper.png", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %> 
 
               <!-- Card content -->
               <div class="card-body">
@@ -419,10 +419,10 @@
             <!-- Card -->
 
             <!-- Card -->
-            <div class="card SmallcardRaidators" >
+            <div class="card small-card-raidators" >
 
               <!-- Card image -->
-              <%= image_tag("equipment/pencil.jpg", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %> 
+              <%= image_tag("equipment/pencil.jpg", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %> 
               <!-- Card content -->
               <div class="card-body">
           
@@ -435,10 +435,10 @@
             <!-- Card -->
 
             <!-- Card -->
-            <div class="card SmallcardRaidators">
+            <div class="card small-card-raidators">
 
               <!-- Card image -->
-              <%= image_tag("equipment/chalkboard.png", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %> 
+              <%= image_tag("equipment/chalkboard.png", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %> 
 
               <!-- Card content -->
               <div class="card-body">
@@ -452,10 +452,10 @@
             <!-- Card -->
             
             <!-- Card -->
-            <div class="card SmallcardRaidators" >
+            <div class="card small-card-raidators" >
 
               <!-- Card image -->
-              <%= image_tag("equipment/sportwear.jpg", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %> 
+              <%= image_tag("equipment/sportwear.jpg", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %> 
 
               <!-- Card content -->
               <div class="card-body">
@@ -469,10 +469,10 @@
             <!-- Card -->
 
             <!-- Card -->
-            <div class="card SmallcardRaidators" >
+            <div class="card small-card-raidators" >
 
               <!-- Card image -->
-              <%= image_tag("equipment/game.jpg", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %> 
+              <%= image_tag("equipment/game.jpg", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %> 
 
               <!-- Card content -->
               <div class="card-body">
@@ -504,10 +504,10 @@
             <div class="col-md-6 col-lg-3 mx-4">
 
               <!-- Card -->
-              <div class="card SmallcardRaidators" >
+              <div class="card small-card-raidators" >
 
                 <!-- Card image -->
-                <%= image_tag("equipment/soap.jpg", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %> 
+                <%= image_tag("equipment/soap.jpg", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %> 
 
                 <!-- Card content -->
                 <div class="card-body">
@@ -521,10 +521,10 @@
               <!-- Card --> 
 
               <!-- Card -->
-              <div class="card SmallcardRaidators">
+              <div class="card small-card-raidators">
 
                 <!-- Card image -->
-                <%= image_tag("equipment/shampoo.jpg", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %> 
+                <%= image_tag("equipment/shampoo.jpg", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %> 
 
                 <!-- Card content -->
                 <div class="card-body">
@@ -544,10 +544,10 @@
             <div class="col-md-6 col-lg-3">
 
               <!-- Card -->
-              <div class="card SmallcardRaidators" >
+              <div class="card small-card-raidators" >
 
                 <!-- Card image -->
-                <%= image_tag("equipment/coton.jpg", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %> 
+                <%= image_tag("equipment/coton.jpg", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %> 
 
                 <!-- Card content -->
                 <div class="card-body">
@@ -561,10 +561,10 @@
               <!-- Card -->   
               
               <!-- Card -->
-              <div class="card SmallcardRaidators" >
+              <div class="card small-card-raidators" >
 
                 <!-- Card image -->
-                <%= image_tag("equipment/tissue.jpg", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %> 
+                <%= image_tag("equipment/tissue.jpg", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %> 
 
                 <!-- Card content -->
                 <div class="card-body">
@@ -584,10 +584,10 @@
             <div class="col-md-6 col-lg-3">
               
               <!-- Card -->
-              <div class="card SmallcardRaidators">
+              <div class="card small-card-raidators">
 
                 <!-- Card image -->
-                <%= image_tag("equipment/shampoo.jpg", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %> 
+                <%= image_tag("equipment/shampoo.jpg", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %> 
 
                 <!-- Card content -->
                 <div class="card-body">
@@ -601,10 +601,10 @@
               <!-- Card -->  
 
               <!-- Card -->
-              <div class="card SmallcardRaidators">
+              <div class="card small-card-raidators">
 
                 <!-- Card image -->
-                <%= image_tag("equipment/toothbrush.jpg", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %> 
+                <%= image_tag("equipment/toothbrush.jpg", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %> 
 
                 <!-- Card content -->
                 <div class="card-body">
