--- a/app/views/static_pages/home_page.html.erb
+++ b/app/views/static_pages/home_page.html.erb
@@ -81,7 +81,7 @@
             <div class="col-lg-4 col-md-12 mb-lg-0 mb-4">
       
               <!-- Card -->
-              <div class="card SmallcardRaidators">
+              <div class="card small-card-raidators">
       
                 <!-- Card image -->
                 <td><i class="mt-5 text-center fas fa-users fa-5x"></i></td>      
@@ -107,7 +107,7 @@
             <div class="col-lg-4 col-md-6 mb-md-0 mb-4">
       
               <!-- Card -->
-              <div class="card SmallcardRaidators">
+              <div class="card small-card-raidators">
       
                 <!-- Card image -->
                 <i class="mt-5 text-center fas fa-globe-europe fa-5x"></i>
@@ -133,7 +133,7 @@
             <div class="col-lg-4 col-md-6 mb-0">
       
               <!-- Card -->
-              <div class="card SmallcardRaidators">
+              <div class="card small-card-raidators">
       
                 <!-- Card image -->
                 <i class=" mt-5 text-center fas fa-hands-helping fa-5x"></i>
@@ -177,10 +177,10 @@
             <div class="col-lg-6 col-md-12 mb-lg-3 mb-4">
       
               <!-- Card -->
-              <div class="card SmallcardRaidators">
+              <div class="card small-card-raidators">
       
                 <!-- Card image -->
-                <%= image_tag("home_page/professionnal.png", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %>
+                <%= image_tag("home_page/professionnal.png", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %>
                   
                   <!-- Card content -->
                   <div class="card-body">
@@ -202,10 +202,10 @@
             <div class="col-lg-6 col-md-6 mb-md-3 mb-4">
       
               <!-- Card -->
-              <div class="card SmallcardRaidators">
+              <div class="card small-card-raidators">
       
                 <!-- Card image -->
-                <%= image_tag("home_page/particular.png", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %>
+                <%= image_tag("home_page/particular.png", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %>
       
                 <!-- Card content -->
                 <div class="card-body">
