--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,9 +1,5 @@
 /* custom.css */
 
-.caroussel-caption { background: rgba(0,0,0,0.5); 
-  background-size: cover;
-  top:70%
-  }
 
 .footerend{
   display: flex;
@@ -11,11 +7,9 @@
   align-items: flex-end;
 }
 
-/* ----------CARROUSEL BOX SHADOW------------- */
-
+/* ----------CARROUSEL TEXT POSITION------------- */
 
 .carousel-caption {
-  background: rgba(0, 0, 0, 0.5);
   background-size: cover;
   top: 70%;
   transform: translateY(-150%);
@@ -65,7 +59,7 @@
 /* ------------Card with image right or left------------ */
 
 .card-with-right-left-image-raidators{
-  border-radius: 20px;
+  border-radius: 12px;
 }
 
 .btn-raidators {
@@ -75,7 +69,10 @@
   box-sizing: border-box;
   border-radius: 6px; 
 }
-
+/* ------------Simple rounder card------------ */
+.card-rounded-raidators{
+  border-radius: 12px;
+}
 /* ------------Fonts------------ */
 
 h1{
@@ -92,14 +89,25 @@ p{
   line-height: 1.6;
 }
 
-
+/* ------------background body------------ */
+.light-background-raidators{
+  background-color: rgba(249, 249, 249);
+  padding-top:5%; 
+  padding-bottom: 5%;
+  margin-top: 5%;
+  margin-bottom:5% ;
+}
+section{
+  margin-top: 5%;
+  margin-bottom:5% ;
+}
 /* ------------Banner------------ */
 .banner{
   height: 300px;
 }
 .banner-background{
   color: #f1f1f1; /* Grey text */
-  background: url(https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80);
+  background: url(home_page/EuropRaid-2017-051.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
