change title for pages, left session. I saw some changement to do

--- a/app/views/static_pages/equipments.html.erb
+++ b/app/views/static_pages/equipments.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, "Collecte | Raidators" %>
+
 <%= render :partial => "shared/banner" %>
 <!-- Container introduction and how to help -->
 <div class="container mt-5">
