--- a/app/views/static_pages/privatevisitors.html.erb
+++ b/app/views/static_pages/privatevisitors.html.erb
@@ -36,7 +36,9 @@
 <!-- Container  -->
 <div class="container mt-5">
 
-  <!--Section: Content-->
+ <% content_for :title, "Dons | Raidators" %>
+
+ <!--Section: Content-->
   <section class="dark-grey-text">
       
     <!-- Grid row -->
