--- a/app/views/devise/passwords/_editpassword.html.erb
+++ b/app/views/devise/passwords/_editpassword.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, "Mot de passe | Raidators" %>
+
 <!-- Main navigation -->
 <div class="container-fluid mt-3 mb-5 text-dark ">
   <h2>Modification du mot de passe</h2>
