--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RaidatorsProject</title>
+     <title><%= yield(:title) %></title>
     <meta charset="utf-8">
 
       <%= stylesheet_link_tag 'application', media: 'all' %>
