--- a/app/views/static_pages/partnership.html.erb
+++ b/app/views/static_pages/partnership.html.erb
@@ -1,3 +1,5 @@
+   <% content_for :title, "Sponsoring | Raidators" %>
+
    <%= render :partial => "shared/banner" %>
 
     <div class="container mt-5">
