--- a/app/views/static_pages/home_page.html.erb
+++ b/app/views/static_pages/home_page.html.erb
@@ -197,7 +197,7 @@
       <!-- Grid column -->
 
       <!-- Grid column -->
-      <div class="col-lg-6 col-md-6 mb-md-3 mb-4">
+      <div class="col-lg-6 col-md-12 mb-lg-3 mb-4">
 
         <!-- Card -->
         <div class="card small-card-raidators">
