first step of the creation of comment section

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,4 +9,11 @@
   <button class="btn-primary" type="submit"> <%= link_to "modifier l'article", edit_post_path(post.id) %></button>
 <%end%>
 
+<div class="underpic">  
+    <%= render "comments/comment"%>
+</div>
+
+<div class="underpic w-50">
+    <%= render "comments/form" %>
+</div>
 
