--- a/app/views/static_pages/team.html.erb
+++ b/app/views/static_pages/team.html.erb
@@ -1,5 +1,5 @@
    <% content_for :title, "L'équipage | Raidators" %>
-
+    <%= render :partial => "shared/banner" %>
     <div class="container mt-5">
 
       <!--Section: Content-->
@@ -35,7 +35,7 @@
         <div class="row">
     
           <!-- Grid column -->
-          <div class="col-md-4 mb-4">
+          <div class="col-lg-4 col-md-12 mb-4">
     
             <div class="w-200 mx-auto mb-4">
               <%= image_tag("team/LN.png", class:"z-depth-1 rounded-circle img-fluid mx-auto", alt:"Card image cap") %>
@@ -47,7 +47,7 @@
           <!-- Grid column -->
           
           <!-- Grid column -->
-          <div class="col-md-4 mb-4">
+          <div class="col-lg-4 col-md-12 mb-4">
     
             <div class="w-200 mx-auto mb-4">
               <%= image_tag("team/Ben.png", class:"z-depth-1 rounded-circle img-fluid mx-auto", alt:"Card image cap") %>
@@ -60,7 +60,7 @@
           <!-- Grid column -->
           
           <!-- Grid column -->
-          <div class="col-md-4 mb-4">
+          <div class="col-lg-4 col-md-12 mb-4">
     
             <div class="w-200 mx-auto mb-4">
               <%= image_tag("team/Emy.png", class:"z-depth-1 rounded-circle img-fluid mx-auto", alt:"Card image cap") %>
