--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,10 +12,10 @@
       <div class="col-md-4">
         <ul class="list-unstyled d-flex justify-content-center mb-0 mt-2">
           <li>
-          	<a class="mx-3" role="button">Équipe</a>
+            <%= link_to "Équipe", team_path, class:"mx-3 nav-link" %>
           </li>
           <li>
-          	<a class="mx-3" role="button">Contact</a>
+            <%= link_to "Contact", team_path, class:"mx-3 nav-link" %>
           </li>
         </ul>
       </div>
