--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-custom fixed-top scrolling-navbar">
-  <%= link_to 'Europraid', home_page_path, class:'navbar-brand'%> 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7"
+  <%= link_to(image_tag("Raidators_noir_logo.png", height:"30", class:"d-inline-block align-top"), root_path) %>
+  <button class="navbar-toggler navbar-position" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7"
     aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav navbar-hamburger-display">
       <li class="nav-item active">
         <%= link_to "Accueil", home_page_path, class:"nav-link" %>
         <span class="sr-only">(current)</span>
