--- a/app/views/static_pages/home_page.html.erb
+++ b/app/views/static_pages/home_page.html.erb
@@ -201,7 +201,7 @@
 
         <!-- Card -->
         <div class="card small-card-raidators">
-
+          
           <!-- Card image -->
           <%= image_tag("home_page/particular.png", class:"card-img-top small-card-image-raidators", alt:"Card image cap") %>
 
@@ -245,10 +245,7 @@
         <div class="col-lg-5">
   
           <!-- Featured video -->
-          <div class="view overlay rounded z-depth-2 mb-lg-0 mb-4 ">
-          <%= video_tag "video_humanity.mp4", :size => "420x315", :controls => true %>      
-              
-          </div>
+          <%= video_tag "video_humanity.mp4", :controls => true, class:"video-size-homepage-raidators card-with-right-left-image-raidators" %>      
   
         </div>
         <!-- Grid column -->
@@ -306,10 +303,10 @@
         <!-- Grid column -->
 
         <!-- Grid column -->
-        <div class="col-lg-5">
+        <div class="col-lg-5 col d-none d-md-block">
   
           <!-- Featured image -->
-          <div class="view overlay rounded z-depth-2 mb-lg-0 mb-4">
+          <div class="view mb-lg-0 mb-4">
             <%= image_tag("home_page/children.png", class:"card-img-top card-with-right-left-image-raidators", alt:"Card image cap") %>               
           </div>
   
