finishing front on equipment

--- a/app/views/static_pages/partnership.html.erb
+++ b/app/views/static_pages/partnership.html.erb
@@ -41,7 +41,7 @@
 
           </div>
           
-          <button type="button" class="btn btn-success text-white p-10 mx-5"><%= link_to 'Télécharger le dossier de sponsoring', asset_path('partnership/Dossier_sponsoring_Raidators.pdf') %> </button>
+          <button type="button" class="btn btn-success btn-raidators text-white p-10 mx-5"><%= link_to 'Télécharger le dossier de sponsoring', asset_path('partnership/Dossier_sponsoring_Raidators.pdf') %> </button>
         </div>
     
 
@@ -63,8 +63,8 @@
           <div class="col-lg-5">
     
             <!-- Featured Image -->
-            <div class="view overlay rounded z-depth-2 mb-lg-0 mb-4">
-              <%= image_tag("partnership/205.png", class:"card-img-top", alt:"Card image cap") %>
+            <div class=" mb-lg-0 mb-4">
+              <%= image_tag("partnership/205.png", class:"card-img-top card-with-right-left-image-raidators", alt:"Card image cap") %>
          
             </div>
     
@@ -119,7 +119,7 @@
               <!-- Card content -->
               <div class="card-body my-4">
 
-                <%= image_tag("partnership/Logo_France_3.png", class:"card-img-top", alt:"Card image cap") %>               
+                <%= image_tag("partnership/Logo_France_3.png", class:"card-img-top ", alt:"Card image cap") %>               
                 
               </div>
             </div>  
@@ -257,7 +257,7 @@
               Récoltez du matériel caritatif ou sponsorisez-nous en nous permettant de revendre vos produits sur notre plateforme, ou en nous équipant pour le raid (équipement numériques, camping
               </p>
             <!-- Read more button -->
-            <button type="button" class="btn btn-success btn-raidators text-white p-10 mx-5">Partenariat nature</button>
+            <button type="button" class="btn btn-success btn-raidators text-white p-10 mx-5 mb-md-3">Partenariat nature</button>
             <button type="button" class="btn btn-success btn-raidators text-white p-10 mx-5">Nous contacter</button>
 
     
@@ -265,11 +265,11 @@
           <!-- Grid column -->
 
           <!-- Grid column -->
-          <div class="col-lg-5">
+          <div class="col-lg-5 col d-none d-md-block">
     
             <!-- Featured image -->
-            <div class="view overlay rounded z-depth-2 mb-lg-0 mb-4">
-              <%= image_tag("partnership/don_materiel.png", class:"card-img-top", alt:"Card image cap") %>
+            <div class=" mb-lg-0 mb-4 ">
+              <%= image_tag("partnership/don_materiel.png", class:"card-img-top card-with-right-left-image-raidators", alt:"Card image cap") %>
              
             </div>
     
