modify view web cart, need to add last modicifations

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -71,3 +71,14 @@ border-color:#57B48A;
 box-sizing: border-box;
 border-radius: 6px; 
 }
+
+.stripe-button-el {
+  background-color: #4CAF50;
+  border-radius: 8px;
+
+}
+
+.stripe-button-el:hover {
+  background-color: #4CAF50; /* Green */
+  color: white;
+}
