polishing button/text display

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,14 +3,14 @@
   <head>
      <title><%= yield(:title) %></title>
     <meta charset="utf-8">
-
       <%= stylesheet_link_tag 'application', media: 'all' %>
       <%= javascript_include_tag 'application'%>
-      <%= favicon_link_tag asset_path('cheetah.png') %>    
-
+      <%= favicon_link_tag asset_path('cheetah.png') %>   
+      <script src="https://kit.fontawesome.com/17892e5f3b.js" crossorigin="anonymous"></script>
+      <%= csrf_meta_tags %>
+    </meta>
 
   </head>
-  <%= csrf_meta_tags %>
   <body>
     <%= render 'layouts/navbar' %>
       <!-- MESSAGES -->
@@ -20,5 +20,5 @@
       <!-- FOOTER-->
     <%= render 'layouts/footer' %>
   </body>
-      <script src="https://kit.fontawesome.com/17892e5f3b.js" crossorigin="anonymous"></script>
+      
 </html>
