--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,23 +1,23 @@
 <!-- Main navigation -->
-<div class="container-fluid mt-3 mb-5 ">
+<div class="container-fluid mt-3 mb-5 light-background-raidators ">
   
   <!-- Full Page Intro -->
-  <section class:"image-signup">
-    <!-- Mask & flexbox options-->
-    <div class="mask d-flex justify-content-center align-items-center">
+  <section class:"image-signup ">
+    <!-- form block -->
+    <div class="col-lg-6 col-md-4 form-background-raidators">
       <!-- Content -->
-      <div class="container py-5 my-5">
+      <div class="container py-5 my-5  ">
         
-        <h3 class="font-weight-bold text-center text-white pb-2">Prêt à nous rejoindre ?</h3>
-        <p class="lead text-center text-white pt-2 mb-5">La solidarité n’a pas de frontière.</p>
+        <h2 class="text-center pb-2">Prêt à nous rejoindre ?</h3>
+        <p class="lead text-center pt-2 mb-5">La solidarité n’a pas de frontière.</p>
         
         <!--Grid row-->
-        <div class="row d-flex align-items-center justify-content-center">
+        <div class="row d-flex align-items-center justify-content-center form-background-raidators">
           <!--Grid column-->
           <div class="col-md-6 col-xl-5">
             <!--Form-->
             <div class="card">
-              <div class="card-body z-depth-2 px-4">
+              <div class="card-body px-4  ">
 
                   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
                     <%= render "devise/shared/error_messages", resource: resource %>
@@ -41,7 +41,7 @@
                     </div>
 
                     <div class="actions text-center my-3">
-                      <%= f.submit "Sign up", class:"btn btn-primary" %>
+                      <%= f.submit "Sign up", class:"btn btn-primary btn-dark-raidators" %>
                     </div>
                  <% end %>
 
