--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -42,7 +42,7 @@
             <%= link_to "Profil", user_path(current_user.id), class:"dropdown-item" %>
           <%else%>
             <%= link_to "Inscription", new_user_registration_path, class:"dropdown-item" %>
-            <%= link_to "Log in", new_user_session_path, class:"dropdown-item" %>
+            <%= link_to "Se connecter", new_user_session_path, class:"dropdown-item" %>
           <%end%> 
         </div>
       </li>
